# src/index.ts
@@ -1,11 +1,9 @@
 import express, { type Request, type Response } from "express"; 
 import swaggerRouter from "./routes/swagger.router.js";
 import cors from "cors";
-import pool from "./config/db.js"; //importamos el pool
+import productRouter from "./routes/product.routes.js"; //importamos las rutas de los productos
 
 const port = process.env.PORT; 
-
-
 
 const app = express();
 
@@ -13,7 +11,8 @@ const app = express();
 app.use(express.json());
 app.use(cors())
 
-app.use("/api/docs", swaggerRouter) 
+app.use("/api/docs", swaggerRouter);
+app.use("/api", productRouter); 
 
 //endpoint de prueba
 app.get("/", (req: Request, res: Response) => {
@@ -24,23 +23,8 @@ app.get("/", (req: Request, res: Response) => {
     });
 });
 
-//endpoint para obtener todos los productos del menú
-app.get("/api/menu", async(req: Request, res: Response) => {
-    /*#swagger.tags = ['Menu']*/
-
-    try{
-        const result = await pool.query("SELECT * FROM products"); //hacemos una consulta a la tabla products
-
-        res.json(result.rows); 
-    } catch (error) {
-        console.error(error);
-
-        res.status(500).json({
-            error: "Error al obtener los productos"
-        });
-    }
-});
 
 app.listen(port, () => {
     console.log(`URL: http://localhost:${port}`);
 });
+
